--- a/metadata.geotiff/Dockerfile
+++ b/metadata.geotiff/Dockerfile
@@ -6,21 +6,22 @@ ARG VERSION="unknown"
 ARG BUILDNUMBER="unknown"
 ARG GITSHA1="unknown"
 
-# copy requirements file
-COPY requirements.txt /home/clowder/
-
 RUN apt-get update &&\
     DEBIAN_FRONTEND=noninteractive apt-get install -y \
     python3 \
     python-is-python3 \
     python3-pip \
     python3-gdal \
+    python3-numpy \
     python3-rtree \
     python-is-python3 \
     python3-scipy && \
-    pip3 install -r /home/clowder/requirements.txt && \
     rm -rf /var/lib/apt/lists/*
 
+# copy requirements file
+COPY requirements.txt /home/clowder/
+RUN pip3 install -r /home/clowder/requirements.txt
+RUN pip install --upgrade numpy
 
 # command to run when starting docker
 ENTRYPOINT ["/home/clowder/entrypoint.sh"]
