--- a/metadata.geotiff/Dockerfile
+++ b/metadata.geotiff/Dockerfile
@@ -1,44 +1,8 @@
-FROM ubuntu:20.04
+FROM python:3.8
 
-MAINTAINER Yong Wook Kim <ywkim@illinois.edu>
+WORKDIR /extractor
+COPY requirements.txt ./
+RUN pip install -r requirements.txt
 
-ARG VERSION="unknown"
-ARG BUILDNUMBER="unknown"
-ARG GITSHA1="unknown"
-
-RUN apt-get update &&\
-    DEBIAN_FRONTEND=noninteractive apt-get install -y \
-    python3 \
-    python-is-python3 \
-    python3-pip \
-    python3-gdal \
-    python3-numpy \
-    python3-rtree \
-    python-is-python3 \
-    python3-scipy && \
-    rm -rf /var/lib/apt/lists/*
-
-# copy requirements file
-COPY requirements.txt /home/clowder/
-RUN pip3 install -r /home/clowder/requirements.txt
-RUN pip install --upgrade numpy
-
-# command to run when starting docker
-ENTRYPOINT ["/home/clowder/entrypoint.sh"]
-CMD ["extractor"]
-
-# Setup environment variables. These are passed into the container. You can change
-# these to your setup. If RABBITMQ_URI is not set, it will try and use the rabbitmq
-# server that is linked into the container. MAIN_SCRIPT is set to the script to be
-# executed by entrypoint.sh
-ENV VERSION=${VERSION} \
-    BUILDNUMBER=${BUILDNUMBER} \
-    GITSHA1=${GITSHA1} \
-    RABBITMQ_URI="" \
-    RABBITMQ_EXCHANGE="clowder" \
-    RABBITMQ_VHOST="%2F" \
-    RABBITMQ_QUEUE="ncsa.geotiff.metadata" \
-    MAIN_SCRIPT="ncsa.image.geotiff.py"
-
-# copy rest of the files needed
-COPY entrypoint.sh *.py extractor_info.json /home/clowder/
+COPY netcdfutils.py ncsa.geo.netcdf.extractor.py extractor_info.json ./
+CMD python ncsa.geo.netcdf.extractor.py
