adding to github workflows

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -43,6 +43,8 @@ jobs:
             FOLDER: preview.geotiff
           - name: pycsw
             FOLDER: pycsw.extractor
+          - name: preview-netcdf
+            FOLDER: preview.netcdf
     steps:
       - uses: actions/checkout@v2
 
